--- a/.github/workflows/ci-pipeline-poll-scm.yml
+++ b/.github/workflows/ci-pipeline-poll-scm.yml
@@ -7,6 +7,7 @@ on:
   schedule:
   - cron: 00 00 * * *
 env:
+  MONGO_URI: "mongodb+srv://supercluster.d83jj.mongodb.net/superData"
   MONGO_USERNAME: superuser
   MONGO_PASSWORD: "${{ secrets.mongodb_password }}"
 jobs:
