--- a/.github/workflows/ci-pipeline-poll-scm.yml
+++ b/.github/workflows/ci-pipeline-poll-scm.yml
@@ -80,6 +80,7 @@ jobs:
     - uses: nick-fields/retry@v3
       with:
         timeout_minutes: 60
+        continue_on_error: true
         max_attempts: 2
         retry_on: error
         command: npm test
