--- a/.github/workflows/ci-pipeline-poll-scm.yml
+++ b/.github/workflows/ci-pipeline-poll-scm.yml
@@ -137,11 +137,29 @@ jobs:
     - name: Docker Build
       run: docker build -t ${{ vars.DOCKERHUB_USERNAME }}/${{ vars.IMAGE_NAME }}:${{ github.sha }} .
       shell: bash
+  Push_Docker_Image:
+    name: Push Docker Image
+    runs-on:
+      - ubuntu-latest
+    needs: Trivy_Vulnerability_Scanner
+    steps:
+    - name: checkout
+      uses: actions/checkout@v4.1.0
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: "${{ vars.DOCKERHUB_USERNAME }}"
+        password: "${{ secrets.DOCKERHUB_TOKEN }}"
+    - name: Build and push
+      uses: docker/build-push-action@v6
+      with:
+        push: true
+        tags: "${{ vars.DOCKERHUB_USERNAME}}/${{ vars.IMAGE_NAME }}:${{ github.sha }}"
   Trivy_Vulnerability_Scanner:
     name: Trivy Vulnerability Scanner
     runs-on:
       - ubuntu-latest
-    needs: Build_Docker_Image
+    needs: Push Docker Image
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
@@ -167,21 +185,4 @@ jobs:
         if-no-files-found: ignore
         name: Trivy Image Critical Vul Report
         path: "."
-  Push_Docker_Image:
-    name: Push Docker Image
-    runs-on:
-      - ubuntu-latest
-    needs: Trivy_Vulnerability_Scanner
-    steps:
-    - name: checkout
-      uses: actions/checkout@v4.1.0
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: "${{ vars.DOCKERHUB_USERNAME }}"
-        password: "${{ secrets.DOCKERHUB_TOKEN }}"
-    - name: Build and push
-      uses: docker/build-push-action@v6
-      with:
-        push: true
-        tags: "${{ vars.DOCKERHUB_USERNAME}}/${{ vars.IMAGE_NAME }}:${{ github.sha }}"
+
