--- a/.github/workflows/ci-pipeline-poll-scm.yml
+++ b/.github/workflows/ci-pipeline-poll-scm.yml
@@ -141,7 +141,7 @@ jobs:
     name: Push Docker Image
     runs-on:
       - ubuntu-latest
-    needs: Trivy_Vulnerability_Scanner
+    needs: Build Docker Image
     steps:
     - name: checkout
       uses: actions/checkout@v4.1.0
