--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "Solar System",
   "version": "6.7.6",
-  "author": "Siddharth Barahalikar <barahalikar.siddharth@gmail.com>",
-  "homepage": "https://www.linkedin.com/in/barahalikar-siddharth/",
+  "author": "Rattanjot Singh Tiwana <tiwanarattan71@gmail.com>",
+  "homepage": "https://www.linkedin.com/in/rattanjot-singh-tiwana/",
   "license": "MIT",
   "scripts": {
     "start": "node app.js",
